add button and functionality

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <title>Fox Game</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="./sprites.css">
+    <script type="module" src="./init.js"></script>
 </head>
 <body>
     
@@ -28,12 +29,17 @@
                 <div class="btn right-btn"></div>
             </div>
             <div class="icons">
-                <div class="icon highlighted fish-icon"></div>
+                <div class="icon fish-icon"></div>
                 <div class="icon poop-icon"></div>
-                <div class="icon weather-icon"></div>
+                <div class="icon highlighted weather-icon"></div>
+            </div>
+            <div class="numbering">
+                <div class="num one">0</div>
+                <div class="num two">1</div>
+                <div class="num three">2</div>            
             </div>
         </div>
     </div>
-    <script src="/init.js"></script>
+    
 </body>
 </html>
